Changes from jTDS 1.1
=======================

06/29/2005 - Alin Sinpalean
 o Corrected a bug with prepare handles caching where the usage count was
   decremented twice when a statement was closed, causing premature release of
   handles.

06/28/2005 - Alin Sinpalean
 o Applied Mike's additional patch for bug [1222199] Delayed exception thrown
   in statement close. "Execution cancelled" exceptions are now only thrown if
   the cancel was caused by a call to Statement.cancel(); if a timeout is the
   cause, the exception is masked as an exception was already thrown when the
   execution timed out.
 o Corrected a memory leak caused by the prepared statement's handles
   collection being implemented through an ArrayList rather than a Set. The
   same handle would be added again and again on each execution and never
   removed until the statement was closed.

06/27/2005 - Alin Sinpalean
 o Per Mike's suggestion, changed the SQLState of query cancelled exceptions to
   HY008 instead of S1008.

06/23/2005 - Alin Sinpalean
 o Corrected bug [1226210] {fn dayofweek()} depends on the language. Fix
   submitted by Xavier Poinsard.

06/22/2005 - Alin Sinpalean
 o Corrected bug [1222199] Delayed exception thrown in statement close. In the
   current implementation Statement.close() does throw any server side errors
   (to make sure the user doesn't miss any) but Connection.close() ignores
   them.
 o Applied Mike's fix for bug [1222238] Unable to connect to Sybase 10 with TDS
   5.

06/21/2005 - Alin Sinpalean
 o Applied Mike's fix for bug [1222205] getParameterMetaData returns not
   implemented.

===============================================================================
06/16/2005 - jTDS 1.1 released
===============================================================================

Changes from jTDS 1.0.3
=======================

06/16/2005 - Alin Sinpalean
 o Added the useLOBs connection property to control whether large types (IMAGE